# sitting-posture-movenet-cnn

./: README.md  dvc.yaml  pyproject.toml
src/sitting_posture_movenet_cnn/: __init__.py  __main__.py
