[project]
name = "sitting-posture-movenet-cnn"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sam Fareez", email = "vsefareez@gmail.com" }
]
dependencies = [
    "marimo>=0.9.7",
    "tensorflow>=2.17.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "kaggle>=1.6.17",
    "dvc>=3.55.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"sitting-posture-movenet-cnn" = "sitting_posture_movenet_cnn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sitting_posture_movenet_cnn"]
